--- a/less/about.less
+++ b/less/about.less
@@ -77,6 +77,9 @@ h4 {
 	@media @mobile{
 		margin: auto;
 	}
+	@media @tablet{
+		margin: auto;
+	}
 
 	.t{
 		color: #0A7E8C;
