--- a/less/header.less
+++ b/less/header.less
@@ -1,10 +1,15 @@
 h1 {
 	font-family: 'Nosifer', cursive;
 	font-size: 10rem;
-	margin: auto /*0 0 -85%*/;
+	margin: auto -85%;
 	justify-content: center;
 	align-content: center;
+	
 	@media @mobile {
+		font-size: 4rem;
+		margin: auto -5%;
+	}
+	@media @tablet {
 		font-size: 4rem;
 		margin: auto -5%;
 	}
